@@ -2,6 +2,12 @@
 
 use ExtUtils::MakeMaker;
 
+my $mm_ver = $ExtUtils::MakeMaker::VERSION;
+if ($mm_ver =~ /_/) {
+    $mm_ver = eval $mm_ver;
+    die $@ if $@;
+}
+
 WriteMakefile(
     NAME         => 'HTML::Diff',
     VERSION_FROM => 'lib/HTML/Diff.pm',
@@ -12,6 +18,11 @@ WriteMakefile(
         'strict'            => 0,
         'Exporter'          => 0,
     },
+
+    ($mm_ver >= 6.31
+        ? (LICENSE => 'perl')
+        : ()
+    ),
 
     EXE_FILES    => ['htmldiff'],
 );
